# open-sandbox

./: .dockerignore  .env.example  .gitignore  CHANGELOG.md  CLAUDE.md  CODE_REVIEW_PLAN.md  CONTRACTS.md  Cargo.toml  ENGINEERING_DISCIPLINE.md  EXEC_STREAMING_DESIGN.md  FOLLOWUPS_v1.0.1.md  LICENSE  NEEDS_HUMAN_ATTENTION.md  PLAN.md  PLAN_CONTRACTS_v1.0.2.md  PLAN_EXEC_STREAMING.md  README.md  REVIEW_LOG.md  SAD.md  SPEC.md  VISION.md
.claude/projects/-Users-p-munaawa-Documents-projects-chamuka-open-sandbox/memory/: MEMORY.md  feedback_autonomous_progression.md
crates/agent/: Cargo.toml
crates/agent-docker/: Cargo.toml
crates/agent-docker/src/: lib.rs
crates/agent-youki/: Cargo.toml  Dockerfile.dev  Dockerfile.test  docker-compose.dev.yml  docker-compose.test.yml
crates/agent-youki/examples/: bench_create_and_start.rs
crates/agent-youki/src/: cni.rs  dns.rs  exec.rs  image.rs  lib.rs  setns_ops.rs  spec.rs
crates/agent-youki/tests/: e2e_mock.rs  live_e2e.rs
crates/agent/src/: container.rs  controller_client.rs  exec_registry.rs  io_stream.rs  lib.rs  proxy_client.rs  reconnect.rs  sandbox.rs  testutil.rs  tunnel.rs
crates/agent/tests/: e2e_mock.rs  live_e2e.rs
crates/api/: Cargo.toml
crates/api/src/: frame.rs  grpc_service.rs  handlers.rs  lib.rs  proxy_client.rs  router.rs  service.rs  state.rs  tests.rs  ws_exec.rs  ws_read_file.rs
crates/api/tests/: e2e_mock.rs  live_e2e.rs
crates/cli/: Cargo.toml
crates/cli/src/: cli.rs  docker_runtime.rs  http_client.rs  lib.rs  main.rs  run.rs  run_subcommand.rs  secret.rs  ssh.rs  tls.rs
crates/cli/tests/: binary_tests.rs  cli_parsing.rs  e2e_mock.rs  live_e2e.rs  run_tests.rs  sandbox_e2e.rs  sandbox_live_e2e.rs
crates/contracts/: Cargo.toml  build.rs
crates/contracts/src/: constants.rs  error.rs  lib.rs  types.rs  wire.rs
crates/contracts/tests/: proto_v1_0_3.rs
crates/controller/: Cargo.toml
crates/controller/src/: auth.rs  error_status.rs  exec_broker.rs  grpc.rs  heartbeat.rs  lib.rs  management.rs  pg_store.rs  registry.rs  scheduler.rs  store.rs  testutil.rs  token.rs
crates/controller/tests/: live_e2e.rs
crates/proxy/: Cargo.toml
crates/proxy/src/: grpc.rs  http_server.rs  io_sessions.rs  lib.rs  pg_store.rs  router.rs  routing_cache.rs  routing_store.rs  stream_mux.rs  testutil.rs  tunnel_pool.rs
crates/proxy/tests/: e2e_mock.rs  live_e2e.rs
crates/ws-client/: Cargo.toml  README.md
crates/ws-client/examples/: echo.rs  interactive-bash.rs  long-running-build.rs  stream-read-file.rs
crates/ws-client/src/: lib.rs
docs/design/: EXEC_STREAMING_DESIGN.md  SCALING_TIERS.md
docs/plans/: CODE_REVIEW_PLAN.md  PLAN.md  PLAN_12FACTOR.md  PLAN_DEV_MODE.md  PLAN_DX_MAGIC.md  PLAN_LIVE_EDIT.md  PLAN_LIVE_EDIT_TASKS.md
docs/reviews/: FOLLOWUPS_v1.0.1.md  FOLLOWUPS_v1.0.3.md  NEEDS_HUMAN_ATTENTION.md  REVIEW_LOG.md
infra/: Pulumi.dev.yaml  Pulumi.yaml  index.ts  package-lock.json  package.json  tsconfig.json
infra/__tests__/: infra.test.ts
infra/e2e/: Dockerfile  Dockerfile.youki  docker-compose.full.yml  docker-compose.yml  docker-compose.youki.yml  run.sh
infra/e2e/scenarios/: 01-echo.sh  02-bulk-transfer.sh  03-signal-term.sh  04-disconnect-kills.sh  05-idle-keepalive.sh  06-long-running.sh  07-command-not-found.sh  08-write-then-exec.sh  09-ws-read-file.sh  README.md  common.sh  run-all.sh
infra/src/: cloud-init.ts  compute.ts  constants.ts  dns.ts  networking.ts  util.ts
proto/: api.proto  controller.proto  proxy.proto
scripts/: dev-down.sh  dev-up.sh
spikes/exec-streaming/spike-01-docker-exec-disconnect/: RESULT.md  run.sh
spikes/exec-streaming/spike-02-nsenter-signal-propagation/: RESULT.md  run.sh
spikes/exec-streaming/spike-03-axum-websocket-properties/: Cargo.toml  RESULT.md
spikes/exec-streaming/spike-03-axum-websocket-properties/src/: main.rs
spikes/exec-streaming/spike-04-bollard-pumping/: Cargo.toml  RESULT.md
spikes/exec-streaming/spike-04-bollard-pumping/src/: main.rs
spikes/exec-streaming/spike-05-youki-pid-capture/: RESULT.md  measure.py  run.sh
ui/: next.config.ts  package.json  pnpm-lock.yaml
ui/app/: globals.css  layout.tsx  page.tsx
ui/components/: console.tsx  editor.tsx  exec-terminal.tsx  file-tree.tsx  files-panel.tsx  header-bar.tsx  live-edit-panel.tsx  preview-pane.tsx  right-pane.tsx  sandbox-list.tsx
ui/components/ui/: badge.tsx  button.tsx  confirm-dialog.tsx  drawer.tsx  input.tsx
ui/legacy/: index.html
ui/lib/: api.ts  config-store.ts  env-vars.ts  exec-prefill.ts  lang.ts  protobuf.ts  resources.ts  templates.ts  tree-defaults.ts  unsaved-buffer.ts
