[package]
name = "open-sandbox-agent-youki"
version = "0.1.0"
edition = "2024"
description = "Daemonless OCI container runtime for Open Sandbox (youki/libcontainer)"

[dependencies]
open-sandbox-contracts = { path = "../contracts" }
open-sandbox-agent = { path = "../agent" }
libcontainer = { version = "0.6.0", default-features = false, features = ["v2", "libseccomp"] }
oci-client = "0.17"
oci-spec = "0.9"
nix = { version = "0.29", features = ["process", "signal", "net"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["process", "fs"] }
tracing = "0.1"

[dev-dependencies]
tokio = { version = "1", features = ["macros", "rt-multi-thread", "test-util"] }
tempfile = "3"
