[package]
name = "open-sandbox-agent-youki"
version = "0.1.0"
edition = "2024"
description = "Daemonless OCI container runtime for Open Sandbox (youki/libcontainer)"

[dependencies]
open-sandbox-contracts = { path = "../contracts" }
open-sandbox-agent = { path = "../agent" }
libcontainer = { version = "0.6.0", default-features = false, features = ["v2", "libseccomp"] }
oci-client = "0.17"
oci-spec = "0.9"
flate2 = "1"
futures-util = "0.3"
nix = { version = "0.29", features = ["process", "signal", "net"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tar = "0.4"
tokio = { version = "1", features = ["process", "fs", "io-util", "rt"] }
tracing = "0.1"
uuid = { version = "1", features = ["v4"] }

[dev-dependencies]
tokio = { version = "1", features = ["macros", "net", "rt-multi-thread", "test-util"] }
tokio-stream = "0.1"
tempfile = "3"
serial_test = "3"
open-sandbox-controller = { path = "../controller" }
sqlx = { version = "0.8", features = ["postgres", "runtime-tokio", "uuid"] }
tonic = "0.12"
