[package]
name = "open-sandbox-agent"
version = "0.1.0"
edition = "2024"

[dependencies]
open-sandbox-contracts = { path = "../contracts" }
bytes = "1"
prost-types = "0.13"
tokio = { version = "1", features = ["net", "rt", "sync", "time"] }
tokio-stream = "0.1"
tonic = "0.12"
tracing = "0.1"
uuid = { version = "1", features = ["v4"] }

[dev-dependencies]
prost-types = "0.13"
tokio = { version = "1", features = ["macros", "net", "rt-multi-thread", "test-util"] }
tokio-stream = "0.1"
