[package]
name = "open-sandbox-api"
version = "0.1.0"
edition = "2024"
description = "REST API gateway for the Open Sandbox platform"

[dependencies]
open-sandbox-contracts = { path = "../contracts" }
axum = "0.8"
hyper = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
tonic = "0.12"
tower = "0.5"
uuid = { version = "1", features = ["v4"] }

[dev-dependencies]
reqwest = { version = "0.12", features = ["json"] }
