[package]
name = "open-sandbox-api"
version = "0.1.0"
edition = "2024"
description = "REST API gateway for the Open Sandbox platform"

[dependencies]
open-sandbox-contracts = { path = "../contracts" }
axum = "0.8"
base64 = "0.22"
hyper = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
tonic = "0.12"
tower = "0.5"
uuid = { version = "1", features = ["v4"] }

[dev-dependencies]
open-sandbox-controller = { path = "../controller", features = ["testutil"] }
open-sandbox-agent = { path = "../agent" }
open-sandbox-agent-docker = { path = "../agent-docker" }
open-sandbox = { path = "../cli" }
reqwest = { version = "0.12", features = ["json"] }
sqlx = { version = "0.8", features = ["postgres", "runtime-tokio"] }
tokio-stream = "0.1"
prost-types = "0.13"
flate2 = "1"
tar = "0.4"
