[package]
name = "open-sandbox-api"
version = "0.1.0"
edition = "2024"
description = "REST API gateway for the Open Sandbox platform"

[dependencies]
open-sandbox-contracts = { path = "../contracts" }
axum = { version = "0.8", features = ["ws"] }
base64 = "0.22"
bytes = "1"
futures-util = "0.3"
hyper = { version = "1", features = ["full"] }
prost = "0.13"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
tokio-stream = "0.1"
tonic = "0.12"
tower = "0.5"
tracing = "0.1"
uuid = { version = "1", features = ["v4"] }

[dev-dependencies]
prost-types = "0.13"
tokio-tungstenite = "0.24"
