[package]
name = "open-sandbox"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "open-sandbox"
path = "src/main.rs"

[dependencies]
open-sandbox-contracts = { path = "../contracts" }
open-sandbox-controller = { path = "../controller" }
open-sandbox-agent = { path = "../agent" }
open-sandbox-proxy = { path = "../proxy" }
bollard = "0.18"
clap = { version = "4", features = ["derive", "env"] }
http = "1"
reqwest = { version = "0.12", features = ["rustls-tls"], default-features = false }
sqlx = { version = "0.8", features = ["postgres", "runtime-tokio"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "signal"] }
tokio-stream = "0.1"
tonic = "0.12"
uuid = { version = "1", features = ["v4"] }

[dev-dependencies]
assert_cmd = "2"
open-sandbox-contracts = { path = "../contracts" }
open-sandbox-controller = { path = "../controller" }
open-sandbox-proxy = { path = "../proxy" }
prost-types = "0.13"
predicates = "3"
sqlx = { version = "0.8", features = ["postgres", "runtime-tokio"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread", "test-util", "time"] }
tokio-stream = "0.1"
tonic = "0.12"
