[package]
name = "open-sandbox"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "open-sandbox"
path = "src/main.rs"

[features]
default = ["docker"]
docker = ["dep:open-sandbox-agent-docker"]
youki = ["dep:open-sandbox-agent-youki"]

[dependencies]
open-sandbox-agent-docker = { path = "../agent-docker", optional = true }
open-sandbox-agent-youki = { path = "../agent-youki", optional = true }
open-sandbox-contracts = { path = "../contracts" }
open-sandbox-api = { path = "../api" }
open-sandbox-controller = { path = "../controller" }
open-sandbox-agent = { path = "../agent" }
open-sandbox-proxy = { path = "../proxy" }
axum = "0.8"
clap = { version = "4", features = ["derive", "env"] }
http = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["json", "env-filter"] }
reqwest = { version = "0.12", features = ["rustls-tls"], default-features = false }
sqlx = { version = "0.8", features = ["postgres", "runtime-tokio"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "signal"] }
tokio-stream = "0.1"
tokio-util = { version = "0.7", features = ["compat"] }
tonic = { version = "0.12", features = ["tls"] }
uuid = { version = "1", features = ["v4"] }

# Comp-2 C5: in-binary ACME (Let's Encrypt) for the proxy's public gRPC
# listener. Operator opts in via env vars; plaintext fallback for dev.
rustls-acme = { version = "0.10", features = ["tokio"] }
tokio-rustls = "0.26"
futures-util = "0.3"

[dev-dependencies]
assert_cmd = "2"
open-sandbox-agent-docker = { path = "../agent-docker" }
open-sandbox-contracts = { path = "../contracts" }
open-sandbox-agent = { path = "../agent" }
open-sandbox-controller = { path = "../controller", features = ["testutil"] }
open-sandbox-proxy = { path = "../proxy" }
prost-types = "0.13"
predicates = "3"
sqlx = { version = "0.8", features = ["postgres", "runtime-tokio"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread", "test-util", "time"] }
tokio-stream = "0.1"
tonic = "0.12"
