[package]
name = "open-sandbox-contracts"
version = "1.0.0"
edition = "2024"
description = "Shared contracts for the Open Sandbox platform"

[dependencies]
prost = "0.13"
prost-types = "0.13"
serde = { version = "1", features = ["derive"] }
thiserror = "2"
tonic = "0.12"
uuid = { version = "1", features = ["v4", "serde"] }

[build-dependencies]
tonic-build = "0.12"
