[package]
name = "open-sandbox-controller"
version = "0.1.0"
edition = "2024"

[dependencies]
open-sandbox-contracts = { path = "../contracts" }
prost-types = "0.13"
sqlx = { version = "0.8", features = ["postgres", "runtime-tokio", "uuid"] }
tokio = { version = "1", features = ["rt", "sync", "time"] }
tokio-stream = "0.1"
thiserror = "2"
tonic = "0.12"
tracing = "0.1"
uuid = { version = "1", features = ["v4"] }

[features]
testutil = []

[dev-dependencies]
tokio = { version = "1", features = ["macros", "net", "rt-multi-thread", "test-util"] }
