[package]
name = "open-sandbox-proxy"
version = "0.1.0"
edition = "2024"

[dependencies]
open-sandbox-contracts = { path = "../contracts" }
bytes = "1"
tracing = "0.1"
http-body-util = "0.1"
hyper = { version = "1", features = ["http1", "server"] }
hyper-util = { version = "0.1", features = ["tokio"] }
prost-types = "0.13"
sqlx = { version = "0.8", features = ["postgres", "runtime-tokio", "uuid"] }
tokio = { version = "1", features = ["rt", "sync", "time"] }
tokio-stream = "0.1"
tonic = "0.12"
uuid = { version = "1", features = ["v4"] }

[dev-dependencies]
prost-types = "0.13"
reqwest = "0.12"
tokio = { version = "1", features = ["macros", "net", "rt-multi-thread", "test-util"] }
