[workspace]

[package]
name = "spike-03-axum-websocket-properties"
version = "0.0.0"
edition = "2024"
publish = false

[[bin]]
name = "spike03"
path = "src/main.rs"

[dependencies]
axum = { version = "0.8", features = ["ws"] }
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = "0.24"
futures-util = "0.3"
bytes = "1"
